fixes misaligned floor

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h1 {
 
 .stop-motion_animation {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   overflow: hidden;
   box-shadow: inset 0 -5rem 0 rgb(229, 211, 149);
